2008-11-09 Dietmar Warning
 * src/spicelib/devices/bsim4/*.c,*.h src/spicelib/parser/inpdomod.c: 
   This is the new and actual BSIM4 version 4.6.3 from UCB. All files are 4.6.2 except
   b4temp.c which is the only bugfix for 4.6.3 (see bsim website). Tested so far with simple
   testcases - but should be proved further with more practical examples.

2008-11-09 Holger Vogt
 * visualc/:
   Directory with project files to compile ngspice with MS Visual
   Studio 2008 

2008-11-04 Holger Vogt
 * src/frontend/com_ghelp.c:
   Notify user that internal help is no longer available in Windows port 

2008-11-04 Paolo Nenzi
 * src/frontend/parser/lexical.c: 
   53: Fixed the problem of segmentation fault when redirecting output putting spaces
       around "<" or ">". A. Roldan - Espice

2008-11-02 Lionel Sainte Cluque
 * src/tclspice.c : tcl_vfprintf corrects the stou bug
 * README.tcl : Creation
 * tests/tcl/test_vectoblt.tcl : modified invocation and package loading

2008-10-27 Dietmar Warning
 * src/spicelib/parser/inp2q.c VBIC is standard - not ADMS (yet)
 * src/spicelib/devices/vbic/vbicnoise.c correct naming array order according vbicdefs.h

2008-10-14 Dietmar Warning
 * src/main.c, src/misc/util.c polish to prevent warnings

2008-10-11 Holger Vogt
 * /frontend/resource.c line 41 correct __MINGW32__
   /ciderlib/input/options.c renamed to optionsc.c to avoid double options.obj in VC++ 2008

2008-10-05 Holger Vogt
 * Macros added to allow compilation of tclspice with MS Visual C++ 2008

2008-09-24 Holger Vogt
 * wstdio.h, scalb.c, complex.h
   Small changes to allow compilation with MS Visual C++ 2008
   main.c, util.c: path of *.cir input file as search path for .include files (Windows only)

2008-09-22 Holger Vogt
 * complex.h, measure.c, resource.c, windisp.c, xpressn.c, rawfile.c, runcoms.c, readhelp.c,
   defines.h, ngspice.h, b4soild.c, hsm1eval102.c, hsm1eval112.c, hsm1eval120.c, wstdio.h
   Small changes to allow compilation with MS Visual C++ 2008
